--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-#
-##spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none
 #
 #spring.jackson.default-property-inclusion=NON_EMPTY
 #logging.file.path=logs
@@ -11,7 +10,7 @@
 #spring.datasource.platform=postgres
 #spring.datasource.url= jdbc:postgresql://localhost:5432/tracker
 #spring.datasource.username=postgres
-#spring.datasource.password=flathex
+#spring.datasource.password=postgres
 #spring.jpa.show-sql= true
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=none
