--- a/tracker/src/main/resources/application.properties
+++ b/tracker/src/main/resources/application.properties
@@ -6,8 +6,15 @@ spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
 spring.jpa.hibernate.ddl-auto=none
 #to create db, close up one and  open below 3
 #spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.initialization-mode=always
 #spring.datasource.initialize=true
+
+
+
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
+#spring.artemis.host=artemis
