Some changes to fix auth issues temporarily

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.output.ansi.enabled=always
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://ec2-3-232-240-231.compute-1.amazonaws.com:5432/dehgub3ftvib3n
