--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,12 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <optional>true</optional>
+        </dependency>
 
 
         <dependency>
@@ -125,8 +130,9 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk</artifactId>
-            <version>1.11.1022</version>
+            <version>1.12.1</version>
         </dependency>
+
 
 
 
