--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 cloud:
   aws:
     credentials:
-      access-key: AKIA5VSF6TZFMA5GVT3X
-      secret-key: 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
+      access-key:
+      secret-key: 
     region:
       static: eu-north-1
     stack:
